--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,15 @@
       ]
     }
   ],
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "browser_action": {
-    "default_icon": "pbsearchicon.png"
+    "default_icon": "pbsearchicon.png",
+    "default_popup": "popup.html"
   },
   "background": {
     "scripts": [
-      "eventPage.js"
+      "eventPage.js",
+      "jquery-3.4.1.min.js"
     ],
     "persistence": false
   },
